gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue20422.d
version https://git-lfs.github.com/spec/v1
oid sha256:687cf88b0d17e93e509bd727a11fb7134b840297f5e76fc12eafbeb59bfbd028
size 492
